--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <!--Map Element-->
         <!--Replace data-basemap and data-attribution with a parameters from Leaflet providers demo: https://leaflet-extras.github.io/leaflet-providers/preview/.-->
         <div id="map" 
-            data-basemap="https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.png"
-            data-attribution='&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'>
+            data-basemap="https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}.png"
+            data-attribution='Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ'>
             <div class="stop-menu"></div>
         </div>
         <!--Button to center a user's location on the map.-->
