--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="modal-body col-md-10 offset-md-1 col-sm-12 col-12" id="splash-body">
           <!--Title of the tour.-->
-          <h1 id="splash-title" class="modal-title">Jewish Heritage Walking Tour</h1>
+          <h1 id="splash-title" class="modal-title">Faith & Footsteps: Jewish History Walk</h1>
           <!--Add additional content here—photos, videos, text, etc.!-->
           <!--Introductory text of the tour.-->
           <img src="img/introduction.png">
@@ -58,7 +58,7 @@
   <nav class="tour-navbar navbar navbar-expand-lg">
     <div class="container-fluid">
       <!--Title of the tour-->
-      <a class="navbar-brand" id="nav-title" href="#">Jewish Heritage Walking Tour</a>
+      <a class="navbar-brand" id="nav-title" href="#">Faith & Footsteps: Jewish History Walk</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
